<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vulture Egg</string>

    <string name="scanning">Scanning...</string>
    <!--<string name="menu_standard">Standard</string>-->
    <!--<string name="menu_metric">Metric</string>-->
    <string name="action_settings">Settings</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_add">Add Device</string>
    <string name="menu_show">Start</string>

    <!-- BLE -->
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="ready">Ready</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="without_service">Without Soft Serial Service</string>

    <string name="title_show">Connect All BLE Device</string>
    <string name="delete">Delete</string>
    <string name="label_data">Data:</string>
    <string name="no_data">无法接收数据</string>
    <string name="connect_failed">连接失败</string>
    <string name="title_my_devices">的设备</string>

    <string name="title_data">Preview Data</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="start_reading">Start</string>
    <string name="stop_reading">Stop</string>
    <string name="menu_start_logging">Start logging</string>
    <string name="menu_stop_logging">Stop logging</string>

    <string name="menu_data">Preview Data</string>
    <string name="menu_dump">Dump All</string>
    <string name="menu_reset">Clear Data</string>

    <string name="is_serial">Serial Present:</string>
    <string name="title_activity_compass">CompassActivity</string>
    <string name="title_activity_ble_tag">BleTagActivity</string>
    <string name="title_activity_finder">FinderActivity</string>
    <string name="title_my_friends">的朋友</string>
    <string name="menu_done">Done</string>

    <string name="title_activity_my_devices_show">MyDevicesShowActivity</string>
    <string name="name">Name</string>
    <string name="deviceId">DeviceID of mCotton(undefined)</string>
    <string name="egg">Egg</string>
    <string name="save">Save</string>
    <string name="station">Station</string>
    <string name="title_activity_setting">SettingActivity</string>

    <string name="mcotton_server">mCotton Server</string>

</resources>
