<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016

     Hao CHEN, iascchen@gmail.com

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="10dp" android:gravity="center">

    <RelativeLayout android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp" android:visibility="gone">
        <TextView android:id="@+id/connection_state"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/disconnected"
                  android:textSize="18sp" android:layout_alignParentLeft="true" android:visibility="gone"/>
        <TextView
                android:id="@+id/isSerial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/is_serial"
                android:textSize="18sp" android:layout_alignParentRight="true" android:visibility="gone"/>
    </RelativeLayout>

    <RelativeLayout android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp">


        <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/devIdSpinner"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/name"
                android:ems="10"
                android:layout_below="@+id/devIdSpinner"
                android:id="@+id/editName"
                android:enabled="false"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deviceId"
                android:ems="10"
                android:id="@+id/editDeviceID" android:inputType="textCapCharacters"
                android:layout_below="@+id/editName"
                android:layout_alignParentStart="true"
                android:enabled="false"/>

        <RadioGroup android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioType"
                    android:layout_below="@+id/editDeviceID">
            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/egg"
                    android:id="@+id/eggRadio"
                    android:checked="true"/>
            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/station"
                    android:id="@+id/stationRadio"/>
        </RadioGroup>
    </RelativeLayout>
    <RelativeLayout android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonDelete" android:src="@android:drawable/ic_menu_delete"
                android:layout_alignParentStart="true"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/infoImage"
                android:background="@drawable/gu_info"
                android:layout_alignBottom="@+id/buttonDelete"
                android:layout_alignParentEnd="true"/>

        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonSave"
                android:src="@android:drawable/ic_menu_save"
                android:layout_toStartOf="@+id/infoImage"
                android:layout_marginRight="20dp"/>
    </RelativeLayout>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView2"
            android:layout_gravity="center_horizontal">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/status"
                android:layout_gravity="center_horizontal" android:lines="30"
                />
    </ScrollView>
</LinearLayout>